# MarkovSoccer

./: README.md  pyproject.toml
docfiles/: citation.bib
markovsoccer/: config.py  dtmc.py  extended_spadl.py  features.py  prism.py  team_model.py  util.py
models/: Arsenal.prism  Belgium.prism  Brazil.prism  Croatia.prism  England.prism  France.prism  Russia.prism  Sweden.prism  Uruguay.prism
public-notebooks/: 1-build-team-models.ipynb  2-features.ipynb  3-similar-teams.ipynb
tests/: test_markovsoccer.py
