[tool.poetry]
name = "markovsoccer"
version = "0.1.0"
description = ""
authors = ["Jeroen Clijmans <jeroen.clijmans@student.kuleuven.be>"]
readme = "README.md"
packages = [{include = "markovsoccer"}]

[tool.poetry.dependencies]
python = "^3.7.1"
black = "^22.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
