[tool.poetry]
name = "markovsoccer"
version = "0.1.0"
description = "Implementation of the construction of Markov models representing the offensive style of play of soccer teams, and analysis based on these models."
authors = ["Jeroen Clijmans <jeroen.clijmans@student.kuleuven.be>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JeroenClijmans/markovsoccer"
repository = "https://github.com/JeroenClijmans/markovsoccer"
keywords = ["soccer", "football", "sports analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
packages = [{include = "markovsoccer"}]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
socceraction = "1.2.3"
statsbombpy = "^1.5.0"
tqdm = "^4.64.1"
tables = "^3.7.0"
matplotsoccer = "^0.0.8"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
jupyter = "^1.0.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
